--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,3 @@
 PORT=7878
-DB_URL=mongodb+srv://ajagekaraishu30:XUeEqDGSuhkwt0ZH@mydb.dhzqx.mongodb.net/real-time-project
-
+DB_URL=mongodb+srv://ajimmujawar3:p10tVPAvpv7DWK2z@mydb.dhzqx.mongodb.net/real-time-project
 JWT_SECRET=asdfghjkqwertyuisxcvbncvbn
