--- a/package.json
+++ b/package.json
@@ -1,10 +1,1 @@
-{
-"scripts": {
-    "client": "npm run dev --prefix frontend",
-    "server": "nodemon backend/server.js",
-    "dev": "concurrently \"npm run backend\" \"npm run frontend\""
-  },
-  "dependencies": {
-    "concurrently": "^9.2.0"
-  }
-}
+{"scripts":{"client":"npm run dev --prefix frontend","server":"nodemon backend/server.js","dev":"concurrently \"npm run backend\" \"npm run frontend\""},"dependencies":{"concurrently":"^9.2.0"}}
